# Rymos

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  THIRD_PARTY.md  rust-toolchain.toml  rymos-packages.toml  rymos-selfhost.toml
.cargo/: config.toml
bootfs/: autoexec.bat  config.sys  drivers.txt  moros.txt  readme.txt
bootfs/config/: readme.txt
bootfs/logs/: readme.txt
bootfs/programs/: allocdemo.elf  bigoutput.elf  cargolike.elf  cmdapi.elf  echoin.elf  faultcheck.elf  fswalk.elf  heapstress.elf  hello.elf  preemptest.elf  readme.txt  relay.elf  rysh.elf  stdreal.elf  stdshim.elf  ticker.elf
bootfs/shared/: readme.txt
bootloader/: Cargo.toml
bootloader/src/: main.rs
docs/: moros-adoption.md  program-abi.md  rust-port-roadmap.md  rysh.md  sdk.md  self-hosting.md
kernel/: Cargo.toml  linker.ld
kernel/src/: main.rs
programs/allocdemo/: Cargo.toml
programs/allocdemo/src/: main.rs
programs/bigoutput/: Cargo.toml
programs/bigoutput/src/: main.rs
programs/cargolike/: Cargo.toml
programs/cargolike/src/: main.rs
programs/cmdapi/: Cargo.toml
programs/echoin/: Cargo.toml
programs/faultcheck/: Cargo.toml
programs/fswalk/: Cargo.toml
programs/heapstress/: Cargo.toml
programs/hello/: Cargo.toml
programs/preemptest/: Cargo.toml
programs/relay/: Cargo.toml
programs/rysh/: Cargo.toml
programs/stdreal/: Cargo.toml
programs/stdshim/: Cargo.toml
programs/ticker/: Cargo.toml
runtime/rymos-user/: Cargo.toml
scripts/: make_data_disk.py  make_fat32.py  make_initrd.py  pfs_put.py  rymos-sdk.py
targets/: x86_64-rymos.json
(+13 files in other folders)
