[workspace]
members = [
  "bootloader",
  "kernel",
  "runtime/rymos-user",
  "programs/allocdemo",
  "programs/cmdapi",
  "programs/echoin",
  "programs/faultcheck",
  "programs/fswalk",
  "programs/heapstress",
  "programs/hello",
  "programs/rysh",
  "programs/stdreal",
  "programs/stdshim",
]
exclude = ["toolchain/rust"]
resolver = "3"

[workspace.package]
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = false
lto = true
codegen-units = 1
